// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobStatusCircle /> Job Status - Cancelled 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-canceled"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<JobStatusCircle /> Job Status - Error 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-danger"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<JobStatusCircle /> Job Status - Success 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-success"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<JobStatusCircle /> Job Status - Terminated 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-canceled"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<JobStatusCircle /> Job Status - Warning 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-warning"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<JobStatusCircle /> Job Status - not provided 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-default"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<JobStatusCircle /> Job Status - random status 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 job-status-circle-default"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;
